--- a/public/style.css
+++ b/public/style.css
@@ -14,6 +14,13 @@ video {
 .main {
   display: flex;
   height: 100vh;
+  width: 100vw;
+}
+.credit {
+  width: 100%;
+  text-align: center;
+  background-color: #252525ec;
+  color: #fff;
 }
 .main__right {
   flex: 0.2;
