--- a/views/room.ejs
+++ b/views/room.ejs
@@ -13,17 +13,31 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+    
+    <script>
+        let user = "";
+while (user.length == 0) {
+  user = prompt("Enter Your Name", "");
+}
+    </script>
 </head>
 
 <body>
     <div class="main">
         <div class="main__left">
+            
             <div class="main__videos">
+                
                 <div id='video-grid'>
     
                 </div>      
 
             </div>
+            <div class="credit"><h5>
+                Developed by  
+                <a href="https://www.instagram.com/yuvi.627/" target="_blank" rel="noopener noreferrer"><img  src="https://img.icons8.com/cute-clipart/32/000000/instagram-new.png"/></a>
+                 UV
+            </h5></div>
             <div class="main__controls">
                 <div class="control__blocks">
                     <div onclick="muteUnmute()" class="control__buttons mute__button">
@@ -74,6 +88,7 @@
         </div>
 
     </div>
+    
     
 
 </body>
